Done: Cart page for all sizes, auth modals. Have to start make backend

--- a/packages/frontend-customer/index.html
+++ b/packages/frontend-customer/index.html
@@ -1,10 +1,19 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link
+      rel="icon"
+      href="/logo-fav-green.png"
+      media="(prefers-color-scheme: light)"
+    />
+    <link
+      rel="icon"
+      href="/logo-fav-white.png"
+      media="(prefers-color-scheme: dark)"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>frontend-customer</title>
+    <title>E-Pharmacy</title>
   </head>
   <body>
     <div id="root"></div>
